--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         
         main {
             background-color: white;
-            width: 400px;
+            max-width: 600px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +32,9 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut cupiditate suscipit temporibus, veniam odit voluptates. Repellendus veritatis porro asperiores molestias at, accusamus eligendi molestiae recusandae consequuntur quos eos rem iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ex enim ad, necessitatibus corrupti assumenda harum illum nam? Aut quo fuga nihil dolores totam, tempore placeat consequatur commodi cumque corrupti.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut cupiditate suscipit temporibus, veniam odit voluptates. Repellendus veritatis porro asperiores molestias at, accusamus eligendi molestiae recusandae consequuntur quos eos rem iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ex enim ad, necessitatibus corrupti assumenda harum illum nam? Aut quo fuga nihil dolores totam, tempore placeat consequatur commodi cumque corrupti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel odio officiis iusto, fugiat nulla, odit eum, ipsam ullam necessitatibus deleniti amet perferendis! Voluptatem odit ullam hic vero incidunt, delectus praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus eaque accusamus similique quasi amet quod perferendis eveniet ipsum labore. At magni aperiam commodi hic corrupti deserunt amet. Libero, dolorum nemo?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut cupiditate suscipit temporibus, veniam odit voluptates. Repellendus veritatis porro asperiores molestias at, accusamus eligendi molestiae recusandae consequuntur quos eos rem iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ex enim ad, necessitatibus corrupti assumenda harum illum nam? Aut quo fuga nihil dolores totam, tempore placeat consequatur commodi cumque corrupti. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque tenetur sed suscipit iusto illo molestiae aliquam reiciendis eligendi harum placeat officiis, eos ducimus quisquam sapiente repudiandae iure minus saepe ex? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam eos laudantium sint aliquam dolore, cupiditate ex vel autem at distinctio suscipit fuga cum asperiores esse tenetur quas tempore unde iure.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut cupiditate suscipit temporibus, veniam odit voluptates. Repellendus veritatis porro asperiores molestias at, accusamus eligendi molestiae recusandae consequuntur quos eos rem iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ex enim ad, necessitatibus corrupti assumenda harum illum nam? Aut quo fuga nihil dolores totam, tempore placeat consequatur commodi cumque corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur totam, perspiciatis dignissimos repellat iste numquam expedita dolore aliquid aliquam reprehenderit alias sint modi deleniti animi tenetur sit quibusdam corporis quis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, dicta eaque. Consequuntur unde quam consectetur magnam iusto quos aliquid nisi vitae voluptatum assumenda molestiae, esse dolor totam asperiores corporis impedit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, tenetur pariatur? Iusto harum facilis excepturi itaque totam, molestiae eligendi esse sequi odio fuga fugit suscipit, quia voluptatem, natus asperiores similique.</p>
     </main>
 </body>
 </html>
