--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743"><strong>Milton Duarte</strong></a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"><strong>Milton Duarte</strong></a></p>
     </header>
         <section class="texto">
             <p>
@@ -20,7 +20,7 @@
                 Mensagem curta e fria <br>
                 Twitter e Facebook <br>
                 Antes que eu caduque <br> 
-                Vou dizer tudo em poesia. <br>
+                Vou dizer tudo em poesia.
             </p>
         </section>
 
@@ -32,7 +32,7 @@
                 O "O" e o "E" foi riscado <br>
                 Para declarar o amor <br>
                 Basta botar uma flor <br>
-                E um coração desenhado. <br>
+                E um coração desenhado.
             </p>
         </section>
 
@@ -44,11 +44,8 @@
                 Ou vai até no começo <br>
                 Agora é .com <br>
                 Se o saite é muito bom <br>
-                Ele vale um alto preço. <br>
+                Ele vale um alto preço.
             </p>
-        </section>
-
-        <section class="texto">
             <p>
                 Pra piorar a liguagem <br>
                 O emoticom é um risco <br>
@@ -56,7 +53,7 @@
                 Ponto e vírgula e um asterisco <br>
                 Um beijo significa <br>
                 Pra entender como fica <br>
-                Decifre esse rabisco. <br>
+                Decifre esse rabisco.
             </p>
         </section>
 
@@ -70,11 +67,9 @@
                 Só chegava no Verão <br>
                 Mas matava a saudade <br>
                 Era texto de verdade <br>
-                Nas linhas do coração. <br>
+                Nas linhas do coração.
             </p>
         </section>
-
-        //---
 
         <section class="texto">
             <p>
@@ -84,11 +79,8 @@
                 A pessoa foi embora <br>
                 Abriu outro aplicativo <br>
                 O mundo ficou cativo <br>
-                Da tecnologia do agora. <br>
+                Da tecnologia do agora.
             </p>
-        </section>
-
-        <section class="texto">
             <p>
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
@@ -96,11 +88,11 @@
                 Se quiser, faça esse teste <br>
                 Dois pontos são dois joelhos <br>
                 Seus lábios são aparelhos <br>
-                Deixe que Deus interprete. <br>
+                Deixe que Deus interprete.
             </p>
         </section>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/"><strong>Gustavo Guanabara</strong></a> para o <a href="https://www.cursoemvideo.com/"><strong>CursoemVideo</strong></a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank"><strong>Gustavo Guanabara</strong></a> para o <a href="https://www.cursoemvideo.com/" target="_blank"><strong>CursoemVideo</strong></a></p>
     </footer>
 </body>
 </html>
