--- a/Exercícios/ex023/tabela001.html
+++ b/Exercícios/ex023/tabela001.html
@@ -12,20 +12,21 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
-        .linha {
-            background-color: gray;
-        }
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        .dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
+
     </style>
 </head>
 <body>
@@ -39,12 +40,12 @@
         <tr class="linha">
             <td>a2</td>
             <td>b2</td>
-            <td>c2</td>
+            <td class="numero">c2</td>
         </tr>
         <tr>
             <td>a3</td>
             <td>b3</td>
-            <td>c3</td>
+            <td class="numero">c3</td>
         </tr>
         <tr>
             <td>a4</td>
