--- a/Exercícios/ex024/iframe003.html
+++ b/Exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, molestias reiciendis debitis excepturi aut necessitatibus dignissimos porro sunt beatae dicta ratione facere. Amet alias, ratione natus aliquam vero dolorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab quia totam veritatis, suscipit numquam dignissimos cumque quidem animi repellat nihil molestias nemo deleniti. Explicabo odio nihil recusandae quisquam modi autem?</p>
 
-    <iframe id="tela" name="frame" src="" frameborder="1">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nam eaque et eos maiores voluptates est itaque recusandae officia ducimus voluptate consequuntur incidunt sit molestias, reprehenderit animi nobis, debitis quaerat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste consectetur possimus mollitia quo quaerat quia excepturi. Sint necessitatibus eos, consectetur qui, reprehenderit optio ab, dolor reiciendis expedita aut accusamus. Non?</p>" frameborder="1">
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
